<resources>
    <string name="app_name">aLotBall</string>
    <string name="go_uppercase">GO</string>
    <string name="lets_get_started_uppercase">LET’S GET STARTED!</string>
    <string name="choose_the_design_uppercase">CHOOSE THE DESIGN</string>
    <string name="describe_ball">Describe your ball design...</string>
    <string name="pick_type">Pick type of your ball</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="tennis">Tennis</string>
    <string name="options_uppercase">OPTIONS</string>
    <string name="generations_uppercase">GENERATIONS</string>
    <string name="generations">generations</string>
    <string name="your_ball_uppercase">YOUR BALL</string>
    <string name="share_uppercase">SHARE</string>
    <string name="delete_uppercase">DELETE</string>
    <string name="share_image">Share Image</string>
    <string name="attach_photo_question">What you want to use to attach a photo of ball design?</string>
    <string name="camera">Camera</string>
    <string name="add_from_photos">Add from photos</string>
    <string name="cancel">Cancel</string>
    <string name="generate_without_photo">Generate without photo</string>
    <string name="loading_text">Almost there! Your custom ball is
loading…</string>
    <string name="options">options</string>
    <string name="notifications">Notifications</string>
    <string name="clear_generations">Clear Generations</string>
    <string name="help_center">Help Center</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="privacy">Privacy</string>
    <string name="support">Support</string>
    <string name="history_cleared">History cleared</string>
    <string name="free_generations_left">free generations left</string>
    <string name="unlimited_access">Unlimited access</string>
</resources>
