<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ios_settings_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back"
            android:tint="@android:color/white"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/options_uppercase"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/notificationsRow"
        style="@style/MelBallSettingsRow"
        android:layout_marginTop="28dp">

        <TextView
            style="@style/MelBallSettingsText"
            android:text="@string/notifications" />

        <Switch
            android:id="@+id/notificationsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/clearHistoryRow"
        style="@style/MelBallSettingsRow">

        <TextView
            style="@style/MelBallSettingsText"
            android:text="@string/clear_generations" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_chevron_right"
            android:tint="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/helpCenterRow"
        style="@style/MelBallSettingsRow">

        <TextView
            style="@style/MelBallSettingsText"
            android:text="@string/help_center" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_chevron_right"
            android:tint="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/feedbackRow"
        style="@style/MelBallSettingsRow">

        <TextView
            style="@style/MelBallSettingsText"
            android:text="@string/your_feedback" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_chevron_right"
            android:tint="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacyRow"
        style="@style/MelBallSettingsRow">

        <TextView
            style="@style/MelBallSettingsText"
            android:text="@string/privacy" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_chevron_right"
            android:tint="@android:color/white" />
    </LinearLayout>

</LinearLayout>
